@@ -1,5 +1,9 @@
 2004-10-23  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/defaulttable.h: Updated.
+
+2004-10-23  Benoît Dejean  <tazforever@dlfp.org>
+
 	* configure.in: Added --enable-more-warnings.
 
 2004-10-23  Benoît Dejean  <tazforever@dlfp.org>
